Some optimisation of map rendering. The first commit from home computer.

--- a/ConwaysGameLife/ConwaysGameLife/Properties/Resources.resx
+++ b/ConwaysGameLife/ConwaysGameLife/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="About_description" xml:space="preserve">
-    <value>Conway's Game of Life is open source software that realizes the work of cell automat.  Developed by Dmitry Pavlov 2016.</value>
+    <value>Conway's Game of Life is open source software that realizes the work of cell automat.  Developed by Dmitry Pavlov, November 2016.</value>
   </data>
   <data name="GitHubLink" xml:space="preserve">
     <value>https://github.com/dmitry741/gamelife_project.git</value>
